test/sema/negative/trait_impls5.impala
trait T {}
trait U : T {}

impl U for i32 {}
impl T for i32 {}
